Juego de la serpiente

--- a/README.mb
+++ b/README.mb
@@ -1,2 +1,10 @@
 ##Snake Game
 
+El juego de la serpiente de toda la vida.
+
+Controles 
+  flecha arriba
+  flecha abajo
+  flecha izquierda
+  flecha derecha
+  P para pausar el juego
