--- a/README.mb
+++ b/README.mb
@@ -2,9 +2,9 @@
 
 El juego de la serpiente de toda la vida.
 
-Controles 
-  flecha arriba
-  flecha abajo
-  flecha izquierda
-  flecha derecha
-  P para pausar el juego
+Controles
+  flecha arriba.
+  flecha abajo.
+  flecha izquierda.
+  flecha derecha.
+  P para pausar el juego.
