--- a/README.mb
+++ b/README.mb
@@ -1,10 +1,15 @@
-#Snake Game
+# Snake Game
 
-El juego de la serpiente de toda la vida.
+## El juego de la serpiente de toda la vida.
 
-Controles
-  flecha arriba.
-  flecha abajo.
-  flecha izquierda.
-  flecha derecha.
-  P para pausar el juego.
+## Controles
+* flecha arriba.
+* flecha abajo.
+* flecha izquierda.
+* flecha derecha.
+* P para pausar el juego.
+
+## Jugabilidad
+* Se puede seleccionar la velocidad al empezar.
+* Segun la dificultadad es mayor los puntos recibidos por manzana.
+* La velocidad aumentara gradualmente.
